[gd_scene load_steps=19 format=3 uid="uid://0pcv5ermn1p"]

[ext_resource type="Script" path="res://scenes/gameplay/enemy/enemy.gd" id="1_bi6oj"]
[ext_resource type="PackedScene" uid="uid://cjafynpl3f6fd" path="res://scenes/gameplay/loot/pickup.tscn" id="2_wgvuk"]
[ext_resource type="Shader" path="res://resources/shaders/invert_canvas_modulation.gdshader" id="3_18q73"]
[ext_resource type="Texture2D" uid="uid://d07g3qtks3hl2" path="res://res/art/gameplay/shadow.png" id="3_cl4l7"]
[ext_resource type="Script" path="res://scenes/components/movement/move_character_body_2d_component.gd" id="3_ynl7d"]
[ext_resource type="Texture2D" uid="uid://b4fhi75sk51gg" path="res://res/art/gameplay/lighting/actor_orange_light.png" id="4_i7onb"]
[ext_resource type="Script" path="res://scenes/components/stats/actor_stats_component.gd" id="6_ysjh2"]
[ext_resource type="Script" path="res://scenes/components/effects/scale/scale_component.gd" id="7_44dt6"]
[ext_resource type="PackedScene" uid="uid://be7cq2knfj5bf" path="res://scenes/components/health/health_bar_component.tscn" id="7_y3leb"]
[ext_resource type="AudioStream" uid="uid://cuj7221o7bai8" path="res://res/sound/sfx/hurt_enemy.wav" id="8_d7esr"]
[ext_resource type="Script" path="res://scenes/components/sound/variable_pitch_audio_stream_player.gd" id="9_lleqn"]
[ext_resource type="AudioStream" uid="uid://d5y37mp1gb6e" path="res://res/sound/sfx/kill_enemy.wav" id="10_f1etg"]
[ext_resource type="Script" path="res://scenes/components/effects/flash/flash_component.gd" id="14_nprog"]
[ext_resource type="Script" path="res://scenes/components/physics/new/hurtbox_component.gd" id="15_gn7cp"]
[ext_resource type="Script" path="res://scenes/components/physics/new/hitbox_component.gd" id="16_camdy"]
[ext_resource type="Script" path="res://scenes/components/movement/augment_motion/augment_knockback_motion.gd" id="16_wiwmn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vkjpo"]
shader = ExtResource("3_18q73")
shader_parameter/canvas_modulate = Color(0.686275, 0.686275, 0.686275, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_yets1"]
blend_mode = 1
light_mode = 1

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
y_sort_enabled = true
collision_layer = 4
collision_mask = 5
motion_mode = 1
script = ExtResource("1_bi6oj")
dropped_loot = ExtResource("2_wgvuk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_vkjpo")

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -1
texture = ExtResource("3_cl4l7")

[node name="AdditiveBlendLight" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0.14902)
z_index = -10
material = SubResource("CanvasItemMaterial_yets1")
position = Vector2(1, 11)
texture = ExtResource("4_i7onb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
debug_color = Color(0.262745, 0, 0.572549, 0.313726)

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "augment_motions")]
script = ExtResource("3_ynl7d")
actor = NodePath("..")
augment_motions = [NodePath("AugmentKnockbackMotion")]

[node name="AugmentKnockbackMotion" type="Node" parent="MoveComponent"]
script = ExtResource("16_wiwmn")
dampen_force = 10

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("7_44dt6")
sprite = NodePath("../AnimatedSprite2D")
scale_amount = Vector2(1.3, 1.4)
scale_duration = 0.6

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("6_ysjh2")

[node name="HealthBarComponent" parent="." node_paths=PackedStringArray("actorStatsComponent") instance=ExtResource("7_y3leb")]
actorStatsComponent = NodePath("../StatsComponent")

[node name="HurtSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_d7esr")
volume_db = -8.012
script = ExtResource("9_lleqn")

[node name="KillSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_f1etg")
volume_db = -7.012
script = ExtResource("9_lleqn")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("14_nprog")
sprite = NodePath("../AnimatedSprite2D")
flash_duration = 0.4

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("15_gn7cp")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("16_camdy")

[connection signal="hurt" from="HurtboxComponent" to="." method="_on_hurtbox_component_hurt"]
